Fix exercise 3
Put scrollbar on bottom of <ControlPane>.
Add spacing between title and <ButtonRow>.

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,4 +1,3 @@
 .buttonRow {
-    overflow: auto;
     white-space: nowrap;
 }
