--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -10,12 +10,14 @@
     to deal with it yet!
   */
   margin-bottom: 32px;
+  overflow: auto;
 }
 
 .title {
   margin: 0;
-  /* Optical centering */
-  margin-bottom: -4px;
+  margin-bottom: 8px;
+  position: sticky;
+  left: 0;
 }
 
 .metadata {
